--- a/society/tokyo-olympics.html
+++ b/society/tokyo-olympics.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>麦迪讯 | 新闻标题 News Title</title>
+    <title>麦迪讯 | 东京奥运，“办还是不办？” 麦迪讯带你了解奥运会背后的政治考量</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="../img/core-img/logo.jpg">
@@ -227,17 +227,17 @@
 
     <section class="single-post-area">
         <!-- Single Post Title -->
-        <div class="single-post-title bg-img background-overlay" style="background-image: url(../img/bg-img/commentary_bg.png);">
+        <div class="single-post-title bg-img background-overlay" style="background-image: url(../img/bg-img/society_bg.png);">
             <div class="container h-100">
                 <div class="row h-100 align-items-end">
                     <div class="col-12">
                         <div class="single-post-title-content">
                             <!-- Post Tag -->
                             <div class="gazette-post-tag">
-                                <a href="#">Commentary</a>
+                                <a href="#">Society</a>
                             </div>
-                            <h2 class="font-pt">新闻评论标题</h2>
-                            <p>January 1, 2022</p>
+                            <h2 class="font-pt">东京奥运，“办还是不办？” 麦迪讯带你了解奥运会背后的政治考量 </h2>
+                            <p>February 23, 2021</p>
                             <p>作者：待添加</p>
                         </div>
                     </div>
@@ -248,38 +248,119 @@
         <div class="single-post-contents">
             <div class="container">
                 <div class="row justify-content-center">
+
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p>新闻正文第一段</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum nunc libero, vitae rutrum nunc porta id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam arcu augue, semper at elementum</p>
-                            <p>nec, cursus nec ante. Vestibulum sed velit scelerisque elit posuere vulputate vel viverra quam. Curabitur laoreet aliquam diam, non mattis arcu feugiat sed. Sed eget pellentesque lacus. Pellentesque in diam vel mauris pretium commodo a ac magna. Suspendisse scelerisque tellus convallis tortor posuere, ut commodo diam blandit. Morbi vel nulla non turpis luctus tempor eu eu urna. Aliquam in lorem a augue mollis volutpat. Nunc iaculis rutrum enim nec viverra. Morbi eleifend metus id tellus luctus, ac porta orci imperdiet.</p>
-                            <p>Morbi efficitur ligula a efficitur mollis. Suspendisse vitae sapien vitae urna eleifend dapibus ut non tortor. In nec metus ac mi ultrices commodo interdum et lacus. Suspendisse potenti. Suspendisse interdum semper dolor nec posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut orci non tortor pretium hendrerit at vel massa. Nunc ut fermentum felis.</p>
                         </div>
                     </div>
+
+                    <div class="col-12 col-md-8">
+                        <div class="single-post-text">
+                            <p><b><i>01</i></b></p>
+                            <p><b>东京奥运，“办还是不办？”</b></p>
+                            <p>
+                                近日，东京奥运会主场馆——新国立竞技场附近，数十名警察出动，驱逐一群抗议者，这样的冲突场面在日本并不多见。这场抗议集会由反对举办东京奥运会的民间团体“奥运灾难通知联络会”组织，“呼吁东京奥运会即刻取消”，“新冠疫情蔓延，医疗体制不堪重负，奥运场馆建设破坏居民生活。</p>
+                            <p>
+                                在这场小型抗议的前一天，七国集团（G7）领导人却对今夏举办东京奥运会和残奥会表示支持，日本首相菅义伟称这样的支持“令人鼓舞”，他还强调东京奥运会将是“人类战胜新冠疫情的标志”。</p>
+                            <p>
+                                从安倍政府到现在的菅义伟政府，日本政府对举办东京奥运会的坚持从未改变。菅义伟屡次为东京奥运造势，表示了奥运会如期举办的决心。然而，日本民众中的很多人对举办奥运会的信心愈发低迷，据时事通信社2月20日发布的民调，58.4%的受访者反对举办东京奥运会，主要原因是新冠疫情尚未得到控制。（新闻来源
+                                澎湃新闻）</p>
+                        </div>
+                    </div>
+
                     <div class="col-12">
                         <div class="single-post-thumb">
-                            <img src="img/1.jpg" alt="">
+                            <center>
+                                <img src="img/JapanProtest.png" alt="抗议东京奥运会的日本民众" width="750">
+                                <p style="color:grey; line-height: 50px">抗议东京奥运会的日本民众</p>
+                            </center>
                         </div>
                     </div>
+
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum nunc libero, vitae rutrum nunc porta id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam arcu augue, semper at elementum</p>
-                            <p>nec, cursus nec ante. Vestibulum sed velit scelerisque elit posuere vulputate vel viverra quam. Curabitur laoreet aliquam diam, non mattis arcu feugiat sed. Sed eget pellentesque lacus. Pellentesque in diam vel mauris pretium commodo a ac magna. Suspendisse scelerisque tellus convallis tortor posuere, ut commodo diam blandit. Morbi vel nulla non turpis luctus tempor eu eu urna. Aliquam in lorem a augue mollis volutpat. Nunc iaculis rutrum enim nec viverra. Morbi eleifend metus id tellus luctus, ac porta orci imperdiet.</p>
-                            <p>Morbi efficitur ligula a efficitur mollis. Suspendisse vitae sapien vitae urna eleifend dapibus ut non tortor. In nec metus ac mi ultrices commodo interdum et lacus. Suspendisse potenti. Suspendisse interdum semper dolor nec posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut orci non tortor pretium hendrerit at vel massa. Nunc ut fermentum felis. </p>
+                            <p><b><i>02</i></b></p>
+                            <p><b>麦迪讯快评</b></p>
+                            <p>东京奥运会的筹办始于3·11东日本大地震发生后不久，日本政府申奥的初衷就是希望通过奥运盛会来展现日本灾后重建的成果。2013年，东京申奥成功后，
+                                “复兴”
+                                就作为本届奥运会的主题被一再强调。按照计划，奥运会圣火接力的起点设在福岛（震后发生核污染的地区），而且该地区还计划向奥运村提供食材。由此可见，<b>安倍政府是在用筹办奥运的契机来加速灾区重建和环境治理的进程，进而巩固自己的政权。</b>
+                            </p>
+                            <p>
+                                然而，计划赶不上变化，安倍利用奥运来提振国威，增强政权合法性的企图被突如其来的新冠疫情打乱。首先，日本的国民经济受到严重挑战，其次，疫情在日本的反弹使得奥运拉动旅游业的计划泡汤，民众亦开始批评政府坚持办奥运的强硬态度，认为在新冠期间举办大型活动是置国民的生命安群于不顾。与此同时，一些地方政府也开始与菅义伟唱反调，甚至扬言如果疫情得不到控制，将取消圣火在本地的传递活动。种种消极反馈，再加上近期奥委会主席森喜朗因发表涉嫌歧视女性言论而被迫辞职的负面新闻，使得新上台的日本首相菅义伟倍感压力。</p>
+                            <p>
+                                列举一组经济数据就能表现出菅义伟政府的左右为难。首先日本2020年GDP同比下跌4.8%，是11年来首次负增长，也是有GDP统计以来仅次于2009年的第二大降幅。不理想的经济数据既宣告了安倍经济学创造的经济繁荣的终结，也挑战着菅义伟的执政地位，民众都对他是否能够开创新局面拭目以待。<b>菅义伟急需一场盛会的成功举办来证明自己的实力（即使这种暂时的繁荣景象不能彻底扭转颓势）。</b>
+                            </p>
+                            <p>
+                                继续去年12月，经过日本和国际奥委会的商议，奥运延期至2021年夏季的追加经费为1980亿日元，由此总额高达1.644万亿日元（约1000亿人民币），而这将成为奥运史上投入费用最高的一届。这背后是大批勒紧裤带支持奥运的企业家和普通民众。</p>
+                            <p>
+                                由此可见，日本政府此番真是骑虎难下。如果坚持举办奥运，政府在普通民众的支持率将会下跌。但如果宣布取消奥运，那么也同样会引起赞助企业们的不满。遭受到“管理不善，国家治理能力低下”的批评，在国际外交舞台上颜面扫地。</p>
+                            <p>然而，<b>本社评论员目前仍倾向于认为东京奥运将会举办。</b>因为对于中日韩等有着集体主义传统的东亚国家来说，举办大型活动的确可以起到提高国家凝聚力，提振国民信心的作用。1964年的东京奥运会，1988年的汉城奥运会，2008年的北京奥运会都引证了上述观点。尽管目前的困难重重，很多日本民众（尤其是年轻人）对东京奥运会并不热心，然而，一旦奥运会如期顺利举行，即使它没有起到预期的拉动经济的作用，日本民众对政府的支持仍然会明显上升，因为大部分日本民众在骨子里对国家尊严和民族精神依然十分看重。况且日本已经为这次盛会下足了血本，就差临门一脚，即使是再犹豫不决的政治领导人也不可能临阵放弃。因此，现在摆在菅义伟面前的问题不是办不办奥运，而是怎样在控制疫情的同时把奥运会办好。办好奥运，就能为自己的执政开一个好头。
+                            </p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-10">
-                        <div class="single-post-blockquote">
-                            <blockquote>
-                                <h6 class="font-pt mb-0">“Vestibulum nulla diam, sodales sit amet erat vel, mollis iaculis lectus. Suspendisse in rhoncus est. Sed aliquet mauris in efficitur tempor. Proin enim felis, laoreet id viverra at”</h6>
-                            </blockquote>
-                        </div>
-                    </div>
+
                     <div class="col-12 col-md-8">
                         <div class="single-post-text">
-                            <p>Suspendisse vitae sapien vitae urna eleifend dapibus ut non tortor. In nec metus ac mi ultrices commodo interdum et lacus. Suspendisse potenti. Suspendisse interdum semper dolor nec posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ut orci non tortor pretium hendrerit at vel massa. Nunc ut fermentum felis.</p>
+                            <p><b><i>03</i></b></p>
+                            <p><b>历史小贴士</b></p>
                         </div>
                     </div>
+
+
+                    <div class="col-12">
+                        <div class="single-post-thumb">
+                            <center>
+                                <img src="img/1964Olympics.png" alt="1964东京奥运" width="750">
+                                <p style="color: grey; line-height: 50px">1964东京奥运</p>
+                            </center>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-8">
+                        <div class="single-post-text">
+                            <p><b>1964年东京奥运会：</b>对于日本人而言，1964年的此次东京奥运的意义非常大。奥运的成功举办，成为了日本经济急速复兴，和平政治转型的象征。申办成功后，日本政府耗资达30亿美元，大兴土木翻新基础设施。新干线、地铁和体育场馆的建设热火朝天。日本民众对奥运的热情也极高。为了收看奥运会，日本社会掀起了购买电视机的热潮，间接促进了家电行业的发展。日本经济学家当时把1962年11月至1964年10月的那一段经济高速发展期称为“奥运景气”。1964年的东京奥运标志着日本逐渐走出战败阴影，走上了发展的快车道。
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <div class="single-post-thumb">
+                            <center>
+                                <img src="img/1988Olympics.png" alt="1988汉城奥运" width="720">
+                                <p style="color:grey; line-height: 50px">1988汉城奥运</p>
+                            </center>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-8">
+                        <div class="single-post-text">
+                            <p><b>1988年汉城奥运会：</b>汉城奥运的申办始于1980年，彼时，韩国军事强人全斗焕刚刚政变夺取政权，国内爆发的光州抗议被血腥镇压，民众对第五共和国军事统治的反感达到了顶点。焦头烂额的全斗焕急切地需要稳固政权的新办法。1980年8月，全斗焕会见了著名日本企业家，旧日本陆军高参濑岛龙三一行。濑岛龙三等日本代表建议全斗焕用举办奥运会或世博会的方法来转移国内矛盾，让人们沉浸在举行盛会的喜悦中而忘记此前的残酷事件。全斗焕立即下令全力申办奥运会，最终，汉城于1981年取得奥运主办权。具有讽刺意义的是，全斗焕本意用奥运会来向全世界展示韩国的经济奇迹，以达到他巩固军事政权合法性的目的。然而，1986年后，随着奥运会进入倒计时，为了让世界各国感受到韩国社会的开放包容，再加上美国的施压，全斗焕不得不启动政治改革的进程（他本人也于奥运会前一年宣布下野）。因此，奥运会从维护独裁统治的工具变成为了韩国民主转型的催化剂。
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <div class="single-post-thumb">
+                            <center>
+                                <img src="img/2008Olympics.png" alt="2008北京奥运" width="750">
+                                <p style="color:grey; line-height: 50px">2008北京奥运</p>
+                            </center>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-8">
+                        <div class="single-post-text">
+                            <p><b>2008年北京奥运会：</b>此次奥运会是我们这代人童年的回忆，它的重大历史意义也不言而喻。进入九十年代，以邓小平为首的第二代领导集体为了展现中国对外改革开放的决心和成果，开始积极争取筹办国际盛会。北京曾经于1993年申请举办过2000年夏季奥林匹克运动会，但最终在最后一轮的投票中以2票之差败于澳大利亚悉尼，此次申奥失败被称为
+                                “兵败蒙特卡洛”
+                                。（当时甚至有失望的民众直接把电视机从楼上摔下的情况）1998年，北京再次提出申办2008年奥运会，以“新北京，新奥运”为竞选口号，并提出“绿色奥运”、“人文奥运”、“科技奥运”的理念。与第一次申办时一样，北京的申办得到了超过90%以上北京市民和中国人民的支持。终于，2001
+                                年7月，北京取得了奥运会主办权。
+                            </p>
+                            <p>
+                                北京奥运会的“全民总动员”式筹备在奥运史上是前所未有的，当时，社会上，课堂里天天宣讲奥运知识。奥运历史，奥运会体育项目，著名体育人物几乎达到老少妇孺皆知的程度。北京奥运的成功加快了中国走上国际舞台的步伐。奥委会主席罗格称北京奥运是“一届真正无与伦比的奥运会”，中国政府也借此宣传中国”举国体制“和社会主义制度的优越性。</p>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
@@ -307,7 +388,10 @@
                                     <div class="comment-content">
                                         <h5>John Doe</h5>
                                         <span class="comment-date font-pt">December 18, 2017</span>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum nunc libero, vitae rutrum nunc porta id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam arcu augue, semper at elementum nec, cursus nec ante.</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                                            dictum nunc libero, vitae rutrum nunc porta id. Interdum et
+                                            malesuada fames ac ante ipsum primis in faucibus. Nam arcu
+                                            augue, semper at elementum nec, cursus nec ante.</p>
                                         <a class="reply-btn" href="#">Reply <i class="fa fa-reply" aria-hidden="true"></i></a>
                                     </div>
                                 </div>
@@ -322,7 +406,11 @@
                                             <div class="comment-content">
                                                 <h5>John Doe</h5>
                                                 <span class="comment-date text-muted">December 18, 2017</span>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum nunc libero, vitae rutrum nunc porta id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam arcu augue, semper at elementum nec, cursus nec ante.</p>
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                                                    elit. Sed dictum nunc libero, vitae rutrum nunc
+                                                    porta id. Interdum et malesuada fames ac ante ipsum
+                                                    primis in faucibus. Nam arcu augue, semper at
+                                                    elementum nec, cursus nec ante.</p>
                                                 <a class="reply-btn" href="#">Reply <i class="fa fa-reply" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
