--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Aug 29, 2022</p>
+                            <p>Sep 6, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年8月22日~28日一周疫情简报：
+                                <p>2022年8月29日~9月5日一周（8日）疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低12%），病例总数超过161万例，平均每日增长1310例（上周为1488例）；累计死亡13336人，最近一周新增死亡37人（上周为32人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低21%），病例总数超过161万例，平均每日增长1035例（上周为1310例）；累计死亡13370人，最近一周新增死亡34人（上周为37人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1612）、戴恩郡Madison（+1202）、沃基肖郡Waukesha（+496）、Sauk郡（+474）、布朗郡Green Bay（+442）、Winnebago郡（+364）、Outagamie郡（+315）、Rock郡（+311）、拉辛郡Racine（+298）、Marathon郡（+261）、Columbia郡（+247）、Kenosha郡（+242）、La Crosse郡（+239）、Washington郡（+219）、Fond du Lac郡（+182）、St. Croix郡（+166）、Eau Claire郡（+161），其他郡一周新增人数在150人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1285）、戴恩郡Madison（+788）、布朗郡Green Bay（+410）、沃基肖郡Waukesha（+358）、拉辛郡Racine（+262）、Winnebago郡（+237）、Kenosha郡（+224）、Rock郡（+200）、Marathon郡（+178）、Outagamie郡（+164）、Fond du Lac郡（+162）、La Crosse郡（+153）、Washington郡（+128）、Eau Claire郡（+121）、St. Croix郡（+121）、Walworth郡（+115）、Wood郡（+112）、Portage郡（+103）、Sheboygan郡（+100），其他郡一周新增人数在100人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低11%），目前病例总数为153968例，周内新增1060例，平均每日增长151例（上周为169例），一周平均检测阳性率为12.0%（稍低于上周的12.2%）。戴恩郡新冠住院病人数目由62人升至68人；重症病房新冠病人数目由6人降至4人；累计死亡515例，新增4例（上周为5例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周大幅下降（降低26%），目前病例总数为154859例，周内（8日）新增891例，平均每日增长111例（上周为151例），一周平均检测阳性率为11.1%（稍低于上周的12.0%）。戴恩郡新冠住院病人数目由68人降至51人；重症病房新冠病人数目由4人升至9人；累计死亡519例，新增4例（上周为4例）。
                                    
-                                    <br><br>—  截止到8月25日，戴恩郡接种至少一剂疫苗者超过46.2万人，占总人口83.7%；完成接种疫苗者超过43.8万人，占总人口的79.4%；完成接种加强针者占63.8%。
+                                    <br><br>—  截止到9月2日，戴恩郡接种至少一剂疫苗者超过46.2万人，占总人口83.7%；完成接种疫苗者超过43.8万人，占总人口的79.4%；完成接种加强针者占64.2%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Beltline高速西南部分区域（S High Point以西、Mid-Town Rd以北）、Lake Monona东北岸（北至Starkweather Park、东至S Stoughton Rd）、Lake Monona南岸及临近的Beltline高速以南、Lake Monona西南岸部分区域（W Washington Ave东南，靠近Brittingham Park）、MSN机场附近等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：Lake Monona东北岸（Starkweather Park以南）、Fitchburg北部部分区域（北至Beltline高速与Park St及Fish Hatchery Rd路口）、麦迪逊市西部Old Middleton Rd与Mineral Point Rd之间部分区域（Glen Oak Hills Park与Garner Park附近）、戴恩郡东部边界附近（包括Deerfield）、戴恩郡东北部的Sun Prairie市西部等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性50例，包括学生35例、职工15例。一周检测阳性率为学生17.3%，职工8.0%。
+                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性52例（上周为50例），包括学生43例（上周为35例）、职工9例（上周为15例）。一周检测阳性率为学生18.6%（上周为17.3%），职工5.3%（上周为8.0%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
